# DriftDB

./: .gitignore  ACHIEVEMENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  DOCS_INDEX.md  IMPLEMENTATION_STATUS.md  Makefile  NEXT_SPRINT_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SESSION_PROGRESS.md  SPRINT_COMPLETE.md  SPRINT_SUMMARY.md  TEST_RESULTS.md  WORK_SUMMARY.md
.claude/: settings.local.json
.github/: description.md
.github/workflows/: ci.yml  docs.yml
benches/: core_operations.rs  large_scale_bench.rs
benchmarks/: HARDWARE.md
benchmarks/baseline/: .gitkeep
benchmarks/baselines/: simple_benchmarks_20251112.txt
client_tests/integration/: test_time_travel.py
client_tests/sql/: test_update_delete.py
client_tests/utils/: test_base.py
clients/javascript/: README.md  (+1 more)
crates/driftdb-cli/: Cargo.toml
crates/driftdb-cli/src/: backup.rs  main.rs
crates/driftdb-cli/tests/: cli_integration_test.rs
crates/driftdb-cli/tests/common/: mod.rs
crates/driftdb-client/: Cargo.toml  README.md
crates/driftdb-client/examples/: basic_usage.rs  edge_cases.rs  parameterized_queries.rs  time_travel.rs  transactions.rs  typed_queries.rs
crates/driftdb-client/src/: client.rs  error.rs  lib.rs  query.rs  transaction.rs  types.rs
crates/driftdb-client/tests/: integration_tests.rs
demo/: DEMO_CREATED.md  README.md  demo.js  index.html  package.json  run-demo.sh  server.js
docs/: ADAPTIVE_SNAPSHOTS.md  BLOOM_FILTERS.md  COLUMNAR_STORAGE.md  FAILOVER.md  FEATURES.md  IMPLEMENTATION_STATUS.md  INDEX.md  PRODUCTION_READY_SUMMARY.md  QUERY_OPTIMIZATION.md  README.md  ROW_LEVEL_SECURITY.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  STATUS.md
grafana-dashboards/: query-performance.json  replication.json  system-overview.json
scripts/: benchmark_regression.sh  security_tests.sh
tests/: comprehensive_sql_test.py  integration_tests.sql  test_complete_rollback.py  test_rollback_fix.py
(+192 files in other folders)
